# lohipiirakka

./: README.md
vko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
vko1/nhl-statistics-1/src/tests/: statistics_service_test.py
vko2/git-branch-harjoitus/: LICENSE  erotus.py  index.py  logger.py
vko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
vko2/poetry-web/: pyproject.toml
vko2/project-reader/src/: project.py  project_reader.py
vko3/web-login/: .gitignore
vko3/web-login/src/: AppLibrary.py
vko3/web-login/src/services/: user_service.py
vko3/web-login/src/tests/: login.robot  register.robot  resource.robot
vko4/: retro.md
vko4/maksukortti-mock/src/tests/: kassapaate_test.py
vko4/mock-demo/tests/: kauppa_test.py
vko4/verkkokauppa/src/tests/: kauppa_test.py
vko5/: aa.txt
vko5/int-joukko/src/: int_joukko.py
vko5/laskin/src/: kayttoliittyma.py
vko5/tennis/src/: tennis_game.py
vko6/query-language/src/: index.py  matchers.py  query_builder.py
vko7/: MERGE.md
vko7/wastebasket/: 2.txt  4.txt
